ready project +img

--- a/app/index.html
+++ b/app/index.html
@@ -14,8 +14,8 @@
 	
 	<!-- Template Basic Images Start -->
 	<meta property="og:image" content="path/to/image.jpg">
-	<link rel="icon" href="img/favicon/favicon.ico">
-	<link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon-180x180.png">
+	<link rel="icon" href="/img/favicon/favicon.ico">
+	<link rel="apple-touch-icon" sizes="180x180" href="/img/favicon/apple-touch-icon-180x180.png">
 	<!-- Template Basic Images End -->
 	
 	<link rel="stylesheet" href="css/normalize.css">
@@ -31,7 +31,7 @@
 		<h1 class="visually-hidden">Salt</h1>
 		<nav class="main-header__wrap">
 			<div class="main-header__logo">
-				<img src="img/_src/logo.png" width="78" height="100" alt="Salt">
+				<img src="/img/_src/logo.png" width="78" height="100" alt="Salt">
 			</div>
 			<div class="menu menu--nojs">
 				<div class="menu__wrap menu--opened menu--nojs">
@@ -119,42 +119,42 @@
 			<ul class="service_items">
 				<li class="service_item">
 					<div class="service__img-wrap">
-						<img src="img/_src/devAuth.png" width="142" height="146" alt="Device Authentication" class="service__img">
+						<img src="/img/_src/devAuth.png" width="142" height="146" alt="Device Authentication" class="service__img">
 					</div>
 					<h3 class="service__name">Device Authentication</h3>
 					<p class="service__desc">Hardware-based device fingerprinting resilient to cloning, malware and device jailbreak/root. Hardware-level control over the displayed UI independent of the device operating system. Hardware-level data protection.</p>
 				</li>
 				<li class="service_item">
 					<div class="service__img-wrap">
-						<img src="img/_src/useAuth.png" width="160" height="150" alt="User Authentication" class="service__img">
+						<img src="/img/_src/useAuth.png" width="160" height="150" alt="User Authentication" class="service__img">
 					</div>
 					<h3 class="service__name">User Authentication</h3>
 					<p class="service__desc">Verify the identity of users for access control with contemporary biometric connected MFA security tokens.</p>
 				</li>
 				<li class="service_item">
 					<div class="service__img-wrap">
-						<img src="img/_src/transAuth.png" width="150" height="150" alt="Transaction Authentication" class="service__img">
+						<img src="/img/_src/transAuth.png" width="150" height="150" alt="Transaction Authentication" class="service__img">
 					</div>
 					<h3 class="service__name">Transaction Authentication</h3>
 					<p class="service__desc">High assurance out-of-band authentication of high impact transactions and instructions initiated through electronic service delivery channels. Audit trail of verification for non-repudiation. Fraud protection against man-in-the-middle and browser malware.</p>
 				</li>
 				<li class="service_item">
 					<div class="service__img-wrap">
-						<img src="img/_src/conAuth.svg" width="132" height="139" alt="Contemporary authentication methods" class="service__img">
+						<img src="/img/_src/conAuth.svg" width="132" height="139" alt="Contemporary authentication methods" class="service__img">
 					</div>
 					<h3 class="service__name">Contemporary authentication methods</h3>
 					<p class="service__desc">Echidna authentication server to enable adaptive risk-based approach to security through a range of methods for different levels of authentication assurance from SMS OTPs, Challenge/Response, to more contemporary QR code signing and advanced connected mobile security tokens capable of transaction signatures with dynamic linking of the transaction context and addition of PIN, Fingerprint and other biometrics.</p>
 				</li>
 				<li class="service_item">
 					<div class="service__img-wrap">
-						<img src="img/_src/drive.svg" width="191" height="127" alt="HSM Solutions" class="service__img">
+						<img src="/img/_src/drive.svg" width="191" height="127" alt="HSM Solutions" class="service__img">
 					</div>
 					<h3 class="service__name">HSM Solutions</h3>
 					<p class="service__desc">Reseller of Thales nShield HSMs with professional services and subject matter expertise in HSMs, key ceremony procedures, and SEE code development.</p>
 				</li>
 				<li class="service_item">
 					<div class="service__img-wrap">
-						<img src="img/_src/cloud.png" width="210" height="108" alt="Cloud & IoT Security" class="service__img">
+						<img src="/img/_src/cloud.png" width="210" height="108" alt="Cloud & IoT Security" class="service__img">
 					</div>
 					<h3 class="service__name">Cloud & IoT Security</h3>
 					<p class="service__desc">Secure the identity and access of users, devices and Internet of Things connecting into the cloud. Support cloud adoption and migration of applications and data into private and public clouds.</p>
@@ -172,7 +172,7 @@
 		</div>
 		<div class="presentation__right">
 			<div class="presentation__video">
-				<img width="724" height="452" src="img/_src/play.jpg" alt="video">
+				<img width="724" height="452" src="/img/_src/play.jpg" alt="video">
 				<svg class="presentation__video--play popup-youtube" width="90px" height="90px" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 88.86 88.86"><title>play</title><circle fill="none" stroke="#fff" stroke-miterlimit="10" stroke-width="2px" cx="44.43" cy="44.43" r="43.43"/><polygon fill="#fff" points="60.97 45.93 32.29 62.49 32.29 29.37 60.97 45.93"/></svg>
 				<div class="presentation__video--wrap">
 					<p class="presentation__video--title">Feature video</p>
@@ -195,7 +195,7 @@
 	<footer class="main-footer">
 		<div class="main-footer__wrap">
 			<div class="main-footer__twitter">
-				<img src="img/_src/tw.jpg" width="300" height="295" alt="twitter">
+				<img src="/img/_src/tw.jpg" width="300" height="295" alt="twitter">
 				<a class="twitter-timeline" data-lang="en" data-width="300" data-height="235" data-theme="light" data-chrome="noheader nofooter noborders noscrollbar" style="" href="https://twitter.com/saltgroup?ref_src=twsrc%5Etfw">Tweets by saltgroup</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 			</div>
 			<div class="main-footer__navigation">
