--- a/app/index.html
+++ b/app/index.html
@@ -50,7 +50,7 @@
 
 		<section class="slider">
 			<ul class="slider__items slider--nojs">
-				<li class="slider__item">
+				<li class="fade slider__item">
 					<div class="slider__content">
 						<h2 class="slider__title">Device Authentication</h2>
 						<p class="slider__descr">SALT Group is a world leader in authentication and security. We have a range of services to improve user authentication. Discover the possibilities with SALT.</p>
@@ -60,7 +60,7 @@
 						<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 250 203.18" width="149" height="121" ><title>twitter</title><path fill="#fff" d="M318.1,102.17a102.91,102.91,0,0,1-32.57,12.45,51.34,51.34,0,0,0-87.41,46.77A145.62,145.62,0,0,1,92.4,107.81a51.31,51.31,0,0,0,15.88,68.47,50.87,50.87,0,0,1-23.23-6.42c0,.22,0,.43,0,.66a51.31,51.31,0,0,0,41.15,50.28,51.42,51.42,0,0,1-23.17.88,51.34,51.34,0,0,0,47.92,35.62,102.91,102.91,0,0,1-63.7,22A105.19,105.19,0,0,1,75,278.55a145.17,145.17,0,0,0,78.62,23c94.35,0,145.94-78.16,145.94-145.94q0-3.33-.15-6.63A104.36,104.36,0,0,0,325,122.47a102.42,102.42,0,0,1-29.46,8.07A51.52,51.52,0,0,0,318.1,102.17Z" transform="translate(-75 -98.41)"/></svg>
 					</div>
 				</li>
-				<li class="slider__item slider--nojs">
+				<li class="fade slider__item slider--nojs">
 					<div class="slider__content">
 						<h2 class="slider__title">Device Authentication 2</h2>
 						<p class="slider__descr">SALT Group is a world leader in authentication and security. We have a range of services to improve user authentication. Discover the possibilities with SALT.</p>
@@ -70,7 +70,7 @@
 						<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 250 203.18" width="149" height="121" ><title>twitter</title><path fill="#fff" d="M318.1,102.17a102.91,102.91,0,0,1-32.57,12.45,51.34,51.34,0,0,0-87.41,46.77A145.62,145.62,0,0,1,92.4,107.81a51.31,51.31,0,0,0,15.88,68.47,50.87,50.87,0,0,1-23.23-6.42c0,.22,0,.43,0,.66a51.31,51.31,0,0,0,41.15,50.28,51.42,51.42,0,0,1-23.17.88,51.34,51.34,0,0,0,47.92,35.62,102.91,102.91,0,0,1-63.7,22A105.19,105.19,0,0,1,75,278.55a145.17,145.17,0,0,0,78.62,23c94.35,0,145.94-78.16,145.94-145.94q0-3.33-.15-6.63A104.36,104.36,0,0,0,325,122.47a102.42,102.42,0,0,1-29.46,8.07A51.52,51.52,0,0,0,318.1,102.17Z" transform="translate(-75 -98.41)"/></svg>
 					</div>
 				</li>
-				<li class="slider__item slider--nojs">
+				<li class="fade slider__item slider--nojs">
 					<div class="slider__content">
 						<h2 class="slider__title">Device Authentication 3 Device A</h2>
 						<p class="slider__descr">SALT Group is a world leader in authentication and security. We have a range of services to improve user authentication. Discover the possibilities with SALT.</p>
