--- a/app/index.html
+++ b/app/index.html
@@ -82,13 +82,13 @@
 				</li>
 			</ul>
 			<div class="slider__toggles slider--nojs">
-				<span class="slider__toggle " role="button" tabindex="0">1 слайд<svg width="20" height="20" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 85.49 98.71"><polygon fill="none" stroke="#fff" stroke-miterlimit="10" stroke-width="10px" points="5 27.57 42.74 5.77 80.49 27.57 80.49 71.15 42.74 92.94 5 71.15 5 27.57"/></svg></span>
-				<span class="slider__toggle " role="button" tabindex="0">2 слайд<svg width="20" height="20" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 85.49 98.71"><polygon fill="none" stroke="#fff" stroke-miterlimit="10" stroke-width="10px" points="5 27.57 42.74 5.77 80.49 27.57 80.49 71.15 42.74 92.94 5 71.15 5 27.57"/></svg></span>
-				<span class="slider__toggle " role="button" tabindex="0">3 слайд<svg width="20" height="20" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 85.49 98.71"><polygon fill="none" stroke="#fff" stroke-miterlimit="10" stroke-width="10px" points="5 27.57 42.74 5.77 80.49 27.57 80.49 71.15 42.74 92.94 5 71.15 5 27.57"/></svg></span>
+				<button class="slider__toggle" role="button"><span>1 слайд<svg width="20" height="20" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 85.49 98.71"><polygon fill="none" stroke="#fff" stroke-miterlimit="10" stroke-width="10px" points="5 27.57 42.74 5.77 80.49 27.57 80.49 71.15 42.74 92.94 5 71.15 5 27.57"/></svg></span></button>
+				<button class="slider__toggle" role="button"><span>2 слайд<svg width="20" height="20" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 85.49 98.71"><polygon fill="none" stroke="#fff" stroke-miterlimit="10" stroke-width="10px" points="5 27.57 42.74 5.77 80.49 27.57 80.49 71.15 42.74 92.94 5 71.15 5 27.57"/></svg></span></button>
+				<button class="slider__toggle" role="button"><span>3 слайд<svg width="20" height="20" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 85.49 98.71"><polygon fill="none" stroke="#fff" stroke-miterlimit="10" stroke-width="10px" points="5 27.57 42.74 5.77 80.49 27.57 80.49 71.15 42.74 92.94 5 71.15 5 27.57"/></svg></span></button>
 			</div>
 		</section>
 
-		<section class="smoothscroll">
+		<section class="smoothscroll" tabindex="0">
 			<p class="smoothscroll__title">Find out more</p>
 			<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 80.49 92.94" width="55" height="63"><polygon fill="none" stroke="#fff" stroke-miterlimit="10" stroke-width="5px" points="2.5 24.68 40.24 2.89 77.99 24.68 77.99 68.26 40.24 90.05 2.5 68.26 2.5 24.68"/><path fill="#fff" d="M29.78,48.44,45.61,63.63l2.27,2.18a3,3,0,1,0,4.24-4.25L36.28,46.37,34,44.19a3,3,0,0,0-4.24,4.25Z" transform="translate(-9.76 -3.53)"/><path fill="#fff" d="M66,44.19,50.14,59.39l-2.26,2.17a3,3,0,0,0,0,4.25,3.07,3.07,0,0,0,4.24,0L68,50.61l2.26-2.17a3,3,0,0,0,0-4.25,3.07,3.07,0,0,0-4.24,0Z" transform="translate(-9.76 -3.53)"/></svg>
 		</section>
